--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jquery": "3.5.0",
     "lodash": "^4.17.20",
-    "node-sass": "4.13.1",
+    "node-sass": "^4.14.1",
     "postcss-loader": "^2.1.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
